--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family:'Roboto',sans-serif;
+    background-image:url(images/patt.png);
     
 }
 *{
@@ -18,7 +19,7 @@ body{
 
 }
 
-.row:after {
+.row:after, .menu::after {
     clear: both;
     display: block;
     content: "";
@@ -36,3 +37,36 @@ body{
     width: 50%;
 }
    
+.header
+{
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 25px 0px;
+}
+
+.menu li{
+    width: 25%;
+    float: left;
+    border-left: 1px solid #2c71b8;
+    
+}
+.menu li:last-child{
+    border-right:1px solid #2c71b8;
+}
+.menu a{
+    display: block;
+    height: 50px;
+    text-decoration: none;
+    color: #2c71b8;
+    text-align: center;
+    line-height: 50px;
+    font-size: 21px;
+}
+.menu a:hover{
+    background-color:#2c71b8;
+    color: white;
+}
+
+.logo
+{
+    margin-top: 7px;
+}
