--- a/style.css
+++ b/style.css
@@ -70,3 +70,118 @@ body{
 {
     margin-top: 7px;
 }
+.search{
+    position: relative;
+    width: 75%;
+    /* background-color:rgba(red, green, blue, 1);
+    border: 1px solid #2c71b8; */
+    /* padding-top: 5px; */
+    /* height: 40px; */
+    float: left;
+    margin-top: 5px;
+}
+.korzina{
+    position: relative;
+    margin-top: 5px;
+    width: 25%;
+   /* border:1px solid black; */
+   
+    padding-top: 5px;
+    float: left;
+}
+
+.ShoppingСart{
+    width: 43px;
+    height: 43px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0px;
+
+    background-color: white;
+    padding-top: 10px;
+
+}
+.ShoppingСart a{
+    padding: 15px 13px 9px 12px;
+}
+
+
+
+
+.ShoppingСart img{
+/* box-sizing: border-box; */
+width: 18px;
+height: 20px;
+
+
+}
+
+.count{
+    color: white;
+    background-color: #2c71b8;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top:-10px;
+    left: -10px;
+    text-align: center;
+    line-height: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;;
+}
+
+
+
+
+
+
+
+.form{
+display: block;
+position: relative;
+/* border: 1px solid #2c71b8; */
+}
+form input{
+    
+    width: 100%;
+    border:1px solid #2c71b8;
+    background-color:rgba(202, 219, 237, 0);
+    height: 43px;
+color:#2c71b8;
+font-family: 'Roboto', sans-serif;
+font-size:21px;
+padding-left: 15px;
+}
+
+
+::-webkit-input-placeholder {color:#2c71b8;font-family: 'Roboto', sans-serif;font-size:21px;}
+::-moz-placeholder          {color:#2c71b8;font-family: 'Roboto', sans-serif;font-size:21px;}/* Firefox 19+ */
+:-moz-placeholder           {color:#2c71b8;font-family: 'Roboto', sans-serif;font-size:21px;}/* Firefox 18- */
+:-ms-input-placeholder      {color:#2c71b8;font-family: 'Roboto', sans-serif;font-size:21px;}
+
+
+.lupa{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 0px;
+    right: 0px;
+    margin: 7px;
+    background-color: #2c71b8;
+    
+}
+.lupa button img{
+    width:14px;
+    height: 12px;
+    
+    
+}
+.lupa button{
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff00;
+    border: none;
+
+}
