--- a/submenu.css
+++ b/submenu.css
@@ -39,7 +39,7 @@
     text-align: left;
     padding-left: 20px;
 }
-.submenu li a:hover{
+.submenu li a:hover {
     color: #2c71b8;
     background-color:#ffffff ;
 }
@@ -48,6 +48,13 @@ ul.submenu {
         display: none;
 }
 
-ul.menu > li:hover > ul.submenu {
+ul.menu > li:hover  ul.submenu {
     display: block;
+   
 }
+
+.home >a:hover .menu a{
+    color: white;
+    background-color: #2c71b8;
+}
+
