--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 }
 .row{
     margin-left: -15px;
-    margin-right: 15px;
+    /* margin-right: 15px; */
 
 }
 
@@ -26,10 +26,14 @@ body{
 } 
 
 
+
 [class*="col-"]{
     float: left;
     padding-left: 15px;
     padding-right: 15px;
+}
+.clear{
+    padding-right: 0px;
 }
 .col-md-3{
     width: 25%;
@@ -226,6 +230,7 @@ form input{
 }
 .filterpanel{
     background-color: #568dc6;
+    padding: 0px;
 }
 .col-main-md-9{
     width: 75%;
@@ -235,6 +240,7 @@ form input{
 
 .col-main-md-9conteiner{
     padding-left: 15px;
+    padding-right: 0px;
     padding-bottom: 15px;
     height:150px;
     width: 100%;
@@ -246,7 +252,7 @@ form input{
    
     height: 650px;
     /* background-color: cornflowerblue; */
-    width: 29%;
+    width: 30.436%;
     border: 1px solid rgb(202, 219, 237);
     margin-top: 15px;
     margin-bottom: 15px;
@@ -290,7 +296,13 @@ h2{
 
 }
 .image img{
-    margin-top: 45px;
+    position: absolute;
+    /* margin-top: 45px; */
+    top :0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 .image .bloc1{
@@ -317,4 +329,56 @@ h2{
   
 }
 
+.product div:nth-child(3n+3){
+     
+    margin-right: 0px;
+    }
+
+.product::after{
+    display: block;
+    clear: both;
+    content: "";
+}
+
+.product{
+    padding-right: 0px;
+}
+
+.col-main-md-3{
+    float: left;
+    padding-left: 15px;
+}
+
+.col-main-md-9{
+    padding-left: 15px;
+    padding-right: 0px;
+}
+
+
+
+
+/* ________________________Products_____________________________________________ */
+
+[class*="bloc"]{
+    position: relative;
+}
+#fullscrin,#like{
+    position: absolute;
+    top :0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+
+
+}
+
+.image .liked{
+    background-color: #2c71b8;
+}
+
+.image .fulscrin-press{
+    background-color: #2c71b8;
+    
+}
 
