--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 }
 .row{
     margin-left: -15px;
-    /* margin-right: 15px; */
+  
 
 }
 
@@ -48,29 +48,6 @@ body{
     padding: 25px 0px;
 }
 
-.menu li{
-    width: 25%;
-    float: left;
-    border-left: 1px solid #2c71b8;
-    position: relative;
-    
-}
-.menu li:last-child{
-    border-right:1px solid #2c71b8;
-}
-.menu a{
-    display: block;
-    height: 50px;
-    text-decoration: none;
-    color: #2c71b8;
-    text-align: center;
-    line-height: 50px;
-    font-size: 21px;
-}
-.menu a:hover{
-    background-color:#2c71b8;
-    color: white;
-}
 
 .logo
 {
@@ -88,9 +65,6 @@ body{
     margin-top: 5px;
     width: 25%;
     height: 40px;
-   /* border:1px solid black; */
-   
-    /* padding-top: 5px; */
     float: left;
 }
 
@@ -153,9 +127,6 @@ right: 0;
 .form{
 display: block;
 position: relative;
-/* border: 1px solid #2c71b8; */
-
-
 }
 
 form{
@@ -251,7 +222,6 @@ form input{
  .col-main-md-9 .col-main-md-3{
    
     height: 650px;
-    /* background-color: cornflowerblue; */
     width: 30.436%;
     border: 1px solid rgb(202, 219, 237);
     margin-top: 15px;
@@ -297,7 +267,6 @@ h2{
 }
 .image img{
     position: absolute;
-    /* margin-top: 45px; */
     top :0;
     bottom: 0;
     left: 0;
@@ -355,6 +324,37 @@ h2{
 }
 
 
+
+
+/* ________________________Products_____________________________________________ */
+
+[class*="bloc"]{
+    position: relative;
+}
+#fullscrin,#like{
+    position: absolute;
+    top :0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+
+
+}
+
+.image .liked{
+    background-color: #2c71b8;
+}
+
+.image .fulscrin-press{
+    background-color: #2c71b8;
+    
+}
+
+div .bloc2{
+    background-color: #2c71b8;
+
+}
 
 
 /* ________________________Products_____________________________________________ */
