--- a/submenu.css
+++ b/submenu.css
@@ -1,4 +1,4 @@
-.submenu {
+/* .submenu {
     position: absolute;
     top: 50px;
     left: -1px;
@@ -51,7 +51,68 @@ ul.submenu {
 ul.menu > li:hover  ul.submenu {
     display: block;
    
+} */
+
+
+
+.dropdown {
+    width: 25%;
+    float: left;
+    border-left: 1px solid #2c71b8;
+    position: relative;
+    
 }
+.dropdown:last-child{
+    border-right:1px solid #2c71b8;
+} 
+
+.dropbtn {
+    height: 50px;
+    color: #2c71b8;
+    text-align: center;
+    width: 100%;
+    font-size: 21px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #2c71b8;
+    width: 200%;
+    left: -1px;
+    z-index: 1;
+}
+.shipping{
+
+
+left: calc(-100% + 1px);
+
+}
+
+.dropdown-content a {
+    height: 50px;
+    color: rgb(44, 113, 184);
+    font-size: 21px;
+    text-align: left;
+    line-height: 50px;
+    padding-left: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    display: block;
+
+}
+
+.dropdown-content a:hover {background-color:#ffffff;color: #2c71b8;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #2c71b8; color: #ffffff;}
 
 
 
