--- a/style.css
+++ b/style.css
@@ -178,12 +178,81 @@ form input{
 
 }
 
-.slider{
+.slider-conteiner{
+    position: relative;
+    text-align: center;
     width: 100%;
     height: 400px;
     background-color: rgba(0, 0, 0, 0.363);
     border: 1px solid rgb(202, 219, 237);
 }
+
+#Slide-label{
+    color: #ffffff;
+    font-size: 100px;
+    line-height: 400px;
+    font-weight: 100;
+}
+
+.slide-row-bottom-conteiner{
+    
+    width: max-content;
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+
+}
+.slide-row-bottom-conteiner::after{
+clear: both;
+display: block;
+content: "";
+}
+.slide-row-bottom-conteiner [class*="slide"]{
+    margin: 0px 10px 0px 10px;
+    float: left;
+    width: 10px;
+    height: 10px;
+    border: 1px solid white;
+   
+}
+
+
+.slide-row-bottom-conteiner .active{
+    background-color: white;
+}
+
+
+.slider-btn{
+    position: absolute;
+}
+
+.slider-btn:first-child{
+    left: calc(50% - 585px);
+    top:50%;
+    margin: -50px 0px;
+
+
+}
+.slider-btn:last-child{
+    
+    right:calc(50% - 585px);
+    top:50%;
+    margin: -50px 0px;
+    
+
+}
+
+.slider-btn button{
+    background-color: #fff0;
+    padding: 0px;
+    border: 0px;
+}
+.slider-btn img{
+    width: 25px;
+}
+
 
 .main-conteiner{
     width: 1200px;
@@ -357,7 +426,6 @@ div .bloc2{
 }
 
 
-/* ________________________Products_____________________________________________ */
 
 [class*="bloc"]{
     position: relative;
@@ -381,4 +449,5 @@ div .bloc2{
     background-color: #2c71b8;
     
 }
+
 
