--- a/submenu.css
+++ b/submenu.css
@@ -55,18 +55,18 @@ ul.menu > li:hover  ul.submenu {
 
 
 
-.dropdown {
+.menu {
     width: 25%;
     float: left;
     border-left: 1px solid #2c71b8;
     position: relative;
     
 }
-.dropdown:last-child{
+.menu:last-child{
     border-right:1px solid #2c71b8;
 } 
 
-.dropbtn {
+.menu-btn {
     background-color:#ffffff00;
     height: 50px;
     color: #2c71b8;
@@ -75,8 +75,15 @@ ul.menu > li:hover  ul.submenu {
     font-size: 21px;
     border: none;
 }
+.menu-btn:focus {
 
-.dropdown {
+    
+
+    outline: none;
+
+}
+
+.menu {
     position: relative;
     display: inline-block;
 }
@@ -111,9 +118,9 @@ left: calc(-100% + 1px);
 
 .dropdown-content a:hover {background-color:#ffffff;color: #2c71b8;}
 
-.dropdown:hover .dropdown-content {display: block;}
+.menu:hover .dropdown-content {display: block;}
 
-.dropdown:hover .dropbtn {background-color: #2c71b8; color: #ffffff;}
+.menu:hover .menu-btn {background-color: #2c71b8; color: #ffffff;}
 
 
 
