--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ content: "";
 {
     width: 25%;
     height: 845px;
-   
+    background-color: #2c71b8;
     
 }
 .filterpanel{
@@ -301,15 +301,60 @@ content: "";
    
 }
 
-.filterlink a{
+/* .filterlink a{
     text-decoration: none;
     color: #235a93;
     margin-top: 30px;
     display: inline-block;
-}
-.filterlink{
+} */
+/* .filterlink{
     display: inline-block;
+} */
+
+.col-main-md-9conteiner .row:after{
+    clear: both;
+    display: block;
+    content: "";
 }
+
+
+.pesochnica ul li:last-child a{
+margin: 0px;
+    text-decoration: underline;
+    }
+
+
+.pesochnica li{
+float: left;
+list-style: none;
+padding-left: 2px;
+padding-right: 2px;
+
+}
+.pesochnica li a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 300;
+    /* margin-top: 30px; */
+    display: inline-block;
+    
+}
+
+.pesochnica li a:hover{
+text-decoration: underline;
+    color: rgba(255, 255, 255, 1);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.pesochnica{
+    margin-top: 25px;
+    color: rgba(255, 255, 255, 0.5);
+    
+    
+}
+
 
 .image{
     width: 100%;
@@ -367,7 +412,7 @@ h2{
   
 }
 
-.product div:nth-child(3n+3){
+.product .col-main-md-3:nth-child(3n+3){
      
     margin-right: 0px;
     }
@@ -450,4 +495,125 @@ div .bloc2{
     
 }
 
+/* Описание товара */
 
+.descripshion-product h3{
+    font-size: 30px;
+}
+
+.descripshion-product {
+    height: 230px;
+    padding: 15px 15px 0px 15px;
+
+
+}
+.descripshion-product div{
+    padding-bottom: 15px;
+}
+
+.descripshion-product span{
+    text-transform: uppercase;
+    font-size: 21px;
+    font-weight: 700;
+
+}
+.descripshion-product .short-description{
+    font-size: 21px;
+   font-weight: 300px;
+}
+
+
+div .prise  {
+    /* color: white;
+    font-family:'Roboto',sans-serif; */
+    font-size: 48px;
+    font-weight: 700;
+    width: max-content;
+    padding: 23px 55px;
+    
+    
+
+}
+
+div .prise span{
+    vertical-align: 20px;
+    font-size: 30px;
+    padding-left: 5px;
+}
+/* Полное описание  */
+
+ .more-details{
+    width: 210px;
+    height: 50px;
+   margin: 0px auto;
+    
+
+}
+.more-details a{
+    width: 100%;
+    display: block;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 21px;
+    color: white;
+    /* font-family:'Roboto',sans-serif; */
+    background-color: transparent;
+    text-decoration: none;
+    border: 1px solid white;
+    height: 100%;
+    line-height: 50px;
+
+}
+
+.more-details a:hover{
+
+    color: #2c71b8;
+    background-color: white;
+  
+
+}
+
+.add-to-cart{
+    position: relative;
+    width: 210px;
+    height: 50px;
+    margin:  10px auto;
+
+}
+
+.add-to-cart a{
+    width: 100%;
+    height: 100%;
+    background-color: #568dc6;
+    color: white;
+    font-weight: 700;
+    display: block;
+    line-height: 50px;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+}
+
+.add-to-cart a:active{
+
+    color: white;
+    font-size: 22px;
+
+
+}
+
+ .add-to-cart #add-to-cart_img{
+     position: absolute;
+     right: 20px;
+     top: 15px; 
+
+ }
+
+
+ .descripshion-product-conteiner{
+     
+     
+    color: white;
+    font-family:'Roboto',sans-serif;
+
+ }
