--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 
 }
 
- .row:after, .menu::after, .main-conteiner::after {
+ .row:after, .menu::after, .conteiner::after {
     clear: both;
     display: block;
     content: "";
@@ -40,6 +40,20 @@ body{
 }
 .col-md-6{
     width: 50%;
+}
+.col-md-4
+{
+    width: 33.33333333333333%;
+}
+.col-md-8{
+    width: 66.66666666666666%;
+}
+.col-md-9{
+    width: 75%;
+  
+}
+.col-md-12{
+    width: 100%;
 }
    
 .header
@@ -254,84 +268,29 @@ content: "";
 }
 
 
-.main-conteiner{
-    width: 1200px;
-    margin:  0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    
-}
-.col-main-md-3
-{
-    width: 25%;
-    height: 845px;
-    background-color: #2c71b8;
-    
-}
+
+
 .filterpanel{
+    margin-right: 15px;
     background-color: #568dc6;
     padding: 0px;
-}
-.col-main-md-9{
-    width: 75%;
-    height: 2000px;
-  
-}
-
-.col-main-md-9conteiner{
-    padding-left: 15px;
-    padding-right: 0px;
-    padding-bottom: 15px;
-    height:150px;
-    width: 100%;
-    
-   
-}
-
- .col-main-md-9 .col-main-md-3{
-   
-    height: 650px;
-    width: 30.436%;
-    border: 1px solid rgb(202, 219, 237);
-    margin-top: 15px;
-    margin-bottom: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
-    padding: initial;
-   
-}
-
-/* .filterlink a{
-    text-decoration: none;
-    color: #235a93;
-    margin-top: 30px;
-    display: inline-block;
-} */
-/* .filterlink{
-    display: inline-block;
-} */
-
-.col-main-md-9conteiner .row:after{
-    clear: both;
-    display: block;
-    content: "";
+    height: 850px;
 }
 
 
-.pesochnica ul li:last-child a{
-margin: 0px;
-    text-decoration: underline;
-    }
 
 
-.pesochnica li{
-float: left;
-list-style: none;
-padding-left: 2px;
-padding-right: 2px;
+
+
+/* __________________________________Хлебные крошки_______________________________________ */
+.breadcrumbs li{
+    float: left;
+    list-style: none;
+    padding-left: 2px;
+    padding-right: 2px;
 
 }
-.pesochnica li a{
+.breadcrumbs li a{
     text-decoration: none;
     color: rgba(255, 255, 255, 0.5);
     font-size: 14px;
@@ -341,45 +300,67 @@ padding-right: 2px;
     
 }
 
-.pesochnica li a:hover{
+.breadcrumbs li a:hover{
 text-decoration: underline;
     color: rgba(255, 255, 255, 1);
     font-size: 15px;
     font-weight: 500;
 }
 
-.pesochnica{
-    margin-top: 25px;
+.breadcrumbs{
+    padding: 25px 0px;
     color: rgba(255, 255, 255, 0.5);
     
     
 }
+/* .breadcrumbs li:last-child+a{
+color: teal;
+   
+} */
 
-
-.image{
-    width: 100%;
-    height: 180px;
-    background-color: rgb(202, 219, 237);
+.breadcrumbs::after{
+    clear: both;
+    display: block;
+    content: "";
 }
+/* ___________________________________________________________________________ */
+
+/* _______________________________sort__________________________________________________ */
+
+
+.sort{
+ 
+    border: 1px solid white;
+    margin: 15px 0px 15px 15px;
+}
+
 h2{
     color: white;
     font-family: 'Roboto', sans-serif;
    font-size: 48px;
    font-weight: bold;
-   margin-top: 20px;
+   padding: 15px;
+}
+/* _______________________________sort__________________________________________________ */
+
+
+/* _______________________________product__________________________________________________ */
+
+
+.product-image{
+    width: 100%;
+    height: 180px;
+    background-color: rgb(202, 219, 237);
 }
 
 
-.image {
-   
-    text-align: center;
-    display: block;
-    position: relative;
-   
 
+.product-image {
 
+    position: relative;  
 }
-.image img{
+
+.product-image img{
     position: absolute;
     top :0;
     bottom: 0;
@@ -388,136 +369,104 @@ h2{
     margin: auto;
 }
 
-.image .bloc1{
+.light-box{
     position: absolute;
     top: 5px;
     right: 5px;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border: 1px solid #235a93;
-    background-color: rgba(255, 255, 255, 0);
-  
-    z-index: 2;
+    background-image: url("images/icon (8).png");
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    
  
+}
+
+.light-box:hover{
+    background-color: #2c71b8;
+    background-image: url("images/icon (6).png");
+
 
 }
-.image .bloc2{
+.like{
     position: absolute;
     top: 50px;
     right: 5px;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border: 1px solid #2c71b8;
-    background-color: rgba(255, 255, 255, 0);
+    background-image: url("images/icon (5).png");
+    background-size: 18px 17px;
+    background-position: center;
+    background-repeat: no-repeat;
   
 }
 
-.product .col-main-md-3:nth-child(3n+3){
-     
-    margin-right: 0px;
+.like:hover{
+    background-color: #2c71b8;
+    background-image: url("images/icon (7).png");
+
+}
+
+
+
+
+
+
+
+
+/* ________________________Products- body_____________________________________________ */
+
+   .product-body{
+       padding: 15px;
+       height: 470px;
+       background-color: #2c71b8;
+       width: 100%;
+       border: 1px solid #dadbdb;
+       color: white;
+       font-family:'Roboto',sans-serif;
+
+    }
+    .product{
+margin-top: 15px;
+margin-bottom: 15px;
+
     }
 
-.product::after{
-    display: block;
-    clear: both;
-    content: "";
-}
-
-.product{
-    padding-right: 0px;
-}
-
-.col-main-md-3{
-    float: left;
-    padding-left: 15px;
-}
-
-.col-main-md-9{
-    padding-left: 15px;
-    padding-right: 0px;
-}
+    .product-conteiner .col-md-4:nth-child(3n+3) {
+        padding-right: 0px;
+    }
 
 
 
 
-/* ________________________Products_____________________________________________ */
-
-[class*="bloc"]{
-    position: relative;
-}
-#fullscrin,#like{
-    position: absolute;
-    top :0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
 
 
-}
-
-.image .liked{
-    background-color: #2c71b8;
-}
-
-.image .fulscrin-press{
-    background-color: #2c71b8;
-    
-}
-
-div .bloc2{
-    background-color: #2c71b8;
-
-}
-
-
-
-[class*="bloc"]{
-    position: relative;
-}
-#fullscrin,#like{
-    position: absolute;
-    top :0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-
-
-}
-
-.image .liked{
-    background-color: #2c71b8;
-}
-
-.image .fulscrin-press{
-    background-color: #2c71b8;
-    
-}
 
 /* Описание товара */
 
-.descripshion-product h3{
+.product-body h3{
     font-size: 30px;
+    font-weight: bold;
 }
 
-.descripshion-product {
+.product-body .description{
     height: 230px;
-    padding: 15px 15px 0px 15px;
-
-
 }
-.descripshion-product div{
+.product-body div{
     padding-bottom: 15px;
 }
 
-.descripshion-product span{
+.description span{
     text-transform: uppercase;
     font-size: 21px;
     font-weight: 700;
 
 }
-.descripshion-product .short-description{
+.product-body .short-description{
     font-size: 21px;
    font-weight: 300px;
 }
@@ -616,4 +565,8 @@ div .prise span{
     color: white;
     font-family:'Roboto',sans-serif;
 
+ }
+
+ .no-pading-right{
+     padding-right: 0px;
  }
