--- a/submenu.css
+++ b/submenu.css
@@ -55,72 +55,91 @@ ul.menu > li:hover  ul.submenu {
 
 
 
-.menu {
+
+.menu li{
     width: 25%;
     float: left;
     border-left: 1px solid #2c71b8;
     position: relative;
     
 }
-.menu:last-child{
+.menu li:last-child{
     border-right:1px solid #2c71b8;
-} 
-
-.menu-btn {
-    background-color:#ffffff00;
+}
+.menu a{
+    display: block;
     height: 50px;
+    text-decoration: none;
     color: #2c71b8;
     text-align: center;
-    width: 100%;
-    font-size: 21px;
-    border: none;
-}
-.menu-btn:focus {
-
-    
-
-    outline: none;
-
-}
-
-.menu {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #2c71b8;
-    width: 200%;
-    left: -1px;
-    z-index: 1;
-}
-.shipping{
-
-
-left: calc(-100% + 1px);
-
-}
-
-.dropdown-content a {
-    height: 50px;
-    color: rgb(44, 113, 184);
-    font-size: 21px;
-    text-align: left;
     line-height: 50px;
-    padding-left: 20px;
-    color: #ffffff;
-    text-decoration: none;
-    display: block;
-
+    font-size: 21px;
+}
+.menu a:hover{
+    background-color:#2c71b8;
+    color: white;
 }
 
-.dropdown-content a:hover {background-color:#ffffff;color: #2c71b8;}
 
-.menu:hover .dropdown-content {display: block;}
+.submenu {
+    position: absolute;
+    top: 50px;
+    left: -1px;
+    background-color:#2c71b8;
+    width: 200%;
+}
 
-.menu:hover .menu-btn {background-color: #2c71b8; color: #ffffff;}
+
+ ul.Shipping{
+    position: absolute;
+    left: calc(-100% + 1px);
+    
+}
 
 
+.submenu ul {
+    padding-left: 0px;
+    background-color: #2c71b8;
+    text-align: left; 
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 
+
+.submenu a{
+    width: 100%;
+    display: block;
+    color: #ffffff;
+   
+}
+
+.submenu li{
+    width: 100%;
+}
+
+
+.submenu li a {
+    text-align: left;
+    padding-left: 20px;
+}
+
+
+ul.submenu { 
+        display: none;
+}
+
+.menu > li:hover  ul.submenu {
+    display: block;
+    z-index: 1;
+   
+}
+
+.menu li:hover a{
+    background-color: #2c71b8;
+    color:#ffffff ;
+   
+}
+.submenu li a:hover {
+    color: #2c71b8;
+    background-color:#ffffff ;
+}
