--- a/style.css
+++ b/style.css
@@ -300,6 +300,11 @@ content: "";
     
 }
 
+.breadcrumbs li:last-child a{
+    text-decoration: underline;
+    
+}
+
 .breadcrumbs li a:hover{
 text-decoration: underline;
     color: rgba(255, 255, 255, 1);
@@ -313,17 +318,14 @@ text-decoration: underline;
     
     
 }
-/* .breadcrumbs li:last-child+a{
-color: teal;
-   
-} */
+
 
 .breadcrumbs::after{
     clear: both;
     display: block;
     content: "";
 }
-/* ___________________________________________________________________________ */
+
 
 /* _______________________________sort__________________________________________________ */
 
@@ -341,7 +343,7 @@ h2{
    font-weight: bold;
    padding: 15px;
 }
-/* _______________________________sort__________________________________________________ */
+
 
 
 /* _______________________________product__________________________________________________ */
@@ -418,7 +420,7 @@ h2{
 
 
 
-/* ________________________Products- body_____________________________________________ */
+/* ________________________Products-body_____________________________________________ */
 
    .product-body{
        padding: 15px;
@@ -446,6 +448,8 @@ margin-bottom: 15px;
 
 
 
+
+    
 /* Описание товара */
 
 .product-body h3{
@@ -457,7 +461,7 @@ margin-bottom: 15px;
     height: 230px;
 }
 .product-body div{
-    padding-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .description span{
@@ -466,23 +470,24 @@ margin-bottom: 15px;
     font-weight: 700;
 
 }
-.product-body .short-description{
+.product-body {
     font-size: 21px;
-   font-weight: 300px;
+   font-weight: 300;
+  
 }
 
 
 div .prise  {
-    /* color: white;
-    font-family:'Roboto',sans-serif; */
+
     font-size: 48px;
     font-weight: 700;
-    width: max-content;
-    padding: 23px 55px;
+    text-align: center;
+   margin: 30px;
     
     
 
 }
+
 
 div .prise span{
     vertical-align: 20px;
@@ -516,8 +521,8 @@ div .prise span{
 
 .more-details a:hover{
 
-    color: #2c71b8;
-    background-color: white;
+    font-weight: 700;
+    background-color: #568dc6; 
   
 
 }
@@ -527,15 +532,23 @@ div .prise span{
     width: 210px;
     height: 50px;
     margin:  10px auto;
+    background-image: url("images/korzina_.png");
+    background-repeat: no-repeat;
+    background-position: 90% 50%;
+  
+
+
 
 }
 
 .add-to-cart a{
     width: 100%;
     height: 100%;
-    background-color: #568dc6;
+  
+    border: 1px solid white;
+    font-size: 21px;
     color: white;
-    font-weight: 700;
+  
     display: block;
     line-height: 50px;
     text-transform: uppercase;
@@ -543,11 +556,13 @@ div .prise span{
     text-align: center;
 }
 
-.add-to-cart a:active{
+.add-to-cart a:hover{
 
-    color: white;
-    font-size: 22px;
-
+      font-weight: 700;
+          background-color: #568dc6; 
+          background-image: url("images/korzina_.png");
+          background-repeat: no-repeat;
+          background-position: 90% 50%;
 
 }
 
