--- a/style.css
+++ b/style.css
@@ -196,12 +196,47 @@ form input{
     position: relative;
     text-align: center;
     width: 100%;
-    height: 400px;
+   
     background-color: rgba(0, 0, 0, 0.363);
     border: 1px solid rgb(202, 219, 237);
 }
+.slider .slick-dots {
+    position: absolute;
+    bottom: 15px;
 
-#Slide-label{
+
+}
+
+.slider.slick-dotted.slick-slider {
+     margin-bottom: 0px; 
+}
+.slider li.slick button::before{
+    color: white;
+
+}
+
+
+.slider .slick-dots li button::before{
+    color: white;
+    font-size: 15px;
+
+}
+.slider .slick-dots li.slick-active button:before {
+    opacity: 0.75;
+    color: rgb(49, 52, 230);
+
+}
+
+/* .slider .slick-arrow .slick-prev{
+    
+} */
+
+/* .slider.slick-arrow .slick-next{
+    background: url(images/right.png);
+    background-repeat: no-repeat;
+} */
+
+/* #Slide-label{
     color: #ffffff;
     font-size: 100px;
     line-height: 400px;
@@ -265,7 +300,7 @@ content: "";
 }
 .slider-btn img{
     width: 25px;
-}
+} */
 
 
 
