--- a/style.css
+++ b/style.css
@@ -203,8 +203,15 @@ form input{
 .slider .slick-dots {
     position: absolute;
     bottom: 15px;
+}
+.slider .slick-next {
+    right: 0px;
+    z-index: 2;
+}
 
-
+.slider .slick-prev {
+    left: 0px;
+    z-index: 2;
 }
 
 .slider.slick-dotted.slick-slider {
@@ -443,10 +450,18 @@ h2{
   
 }
 
-.like:hover{
+.like:hover,.likes{
     background-color: #2c71b8;
     background-image: url("images/icon (7).png");
 
+}
+
+
+
+
+#likes{
+    background-color: #2c71b8;
+    background-image: url("images/icon (7).png");
 }
 
 
@@ -710,4 +725,58 @@ div .prise span{
 
     font-weight: 700;
     background-color: #568dc6;
+}
+
+.footer{
+    height: 40px;
+    background-color:  rgba(255, 255, 255, 0.75);
+    display: flex;
+text-align: center;
+    align-items: center;
+}
+/* .modalWindow{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    background-color: khaki;
+
+} */
+
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0,0,0,0.3);
+}
+.modal-block{
+    width: 300px;
+    margin: 80px auto;
+    height: 200px;
+    border: 1px solid grey;
+    padding: 15px;
+    background-color: #fff;
+}
+.form-fields{
+    margin: 10px 0;
+}
+.form-fields input{
+    width: 100%;
+    height: 30px;
+    padding: 5px;
+}
+.btn-close{
+    text-align: right;
+    cursor: pointer;
+}
+
+.hide{
+    display: none;
+}
+.show{
+    display: block;
 }
